--- a/Desktop/Editar_solodstar.desktop
+++ b/Desktop/Editar_solodstar.desktop
@@ -3,8 +3,8 @@ Version=1.0
 Type=Application
 Name=Editar solo DSTAR
 Comment=
-Exec=sh -c "cd /home/pi/BOOKWORM/qt; ./qt_editor_solodstar"
-Icon=/home/pi/BOOKWORM/ICO_EDITOR_SOLODSTAR.png
+Exec=sh -c "cd /home/pi/IMAGEN-A111/qt; ./qt_editor_solodstar"
+Icon=/home/pi/IMAGEN-A111/ICO_EDITOR_SOLODSTAR.png
 Path=/home/pi/MMDVMHost
 Terminal=false
 StartupNotify=false
