--- a/Desktop/Abrir_Radio.desktop
+++ b/Desktop/Abrir_Radio.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/BOOKWORM; sh ejecutar_radio.sh'
-Icon=/home/pi/BOOKWORM/ICO_RADIO_OFF.png
+Exec=sh -c 'cd /home/pi/IMAGEN-A111; sh ejecutar_radio.sh'
+Icon=/home/pi/IMAGEN-A111/ICO_RADIO_OFF.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
