--- a/Desktop/Abrir_solodstar.desktop
+++ b/Desktop/Abrir_solodstar.desktop
@@ -3,9 +3,9 @@ Version=1.0
 Type=Application
 Name=AbrirsoloDstar
 Comment=
-Exec=sh -c "cd /home/pi/BOOKWORM/; sudo sh ejecutar_solodstar.sh"
-Icon=/home/pi/BOOKWORM/ICO_SOLODSTAR_OFF.png
-Path=/home/pi/BOOKWORM
+Exec=sh -c "cd /home/pi/IMAGEN-A111/; sudo sh ejecutar_solodstar.sh"
+Icon=/home/pi/IMAGEN-A111/ICO_SOLODSTAR_OFF.png
+Path=/home/pi/IMAGEN-A111
 Terminal=false
 StartupNotify=false
 Name[es_ES]=ON/OFF
