--- a/Desktop/Abrir_solofusion.desktop
+++ b/Desktop/Abrir_solofusion.desktop
@@ -3,9 +3,9 @@ Version=1.0
 Type=Application
 Name=AbrirsoloYSF
 Comment=
-Exec=sh -c "cd /home/pi/BOOKWORM/; sudo sh ejecutar_solofusion.sh"
-Icon=/home/pi/BOOKWORM/ICO_SOLOFUSION_OFF.png
-Path=/home/pi/BOOKWORM
+Exec=sh -c "cd /home/pi/IMAGEN-A111/; sudo sh ejecutar_solofusion.sh"
+Icon=/home/pi/IMAGEN-A111/ICO_SOLOFUSION_OFF.png
+Path=/home/pi/IMAGEN-A111
 Terminal=false
 StartupNotify=false
 Name[es_ES]=ON/OFF
