--- a/Desktop/Actualizar_DV4mini.desktop
+++ b/Desktop/Actualizar_DV4mini.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c "cd /home/pi/BOOKWORM;lxterminal --geometry=80x15 -e sudo sh  Actualizar_dv4mini.sh"
-Icon=/home/pi/BOOKWORM/ICO_DV4MINI_OFF.png
+Exec=sh -c "cd /home/pi/IMAGEN-A111;lxterminal --geometry=80x15 -e sudo sh  Actualizar_dv4mini.sh"
+Icon=/home/pi/IMAGEN-A111/ICO_DV4MINI_OFF.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
