--- a/Desktop/Actualizar_IDS.desktop
+++ b/Desktop/Actualizar_IDS.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/BOOKWORM/; sudo sh actualizar_IDS_MMDVMHost.sh'
-Icon=/home/pi/BOOKWORM/ICO_ACTUALIZAR_IDS.png
+Exec=sh -c 'cd /home/pi/IMAGEN-A111/; sudo sh actualizar_IDS_MMDVMHost.sh'
+Icon=/home/pi/IMAGEN-A111/ICO_ACTUALIZAR_IDS.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
