--- a/Desktop/Editar_C4FM.desktop
+++ b/Desktop/Editar_C4FM.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Exec=sh -c "cd /home/pi/BOOKWORM/qt; ./qt_editor_ysf_fcs_ycs"
-Icon=/home/pi/BOOKWORM/ICO_EDITOR_BM.png
+Exec=sh -c "cd /home/pi/IMAGEN-A111/qt; ./qt_editor_ysf_fcs_ycs"
+Icon=/home/pi/IMAGEN-A111/ICO_EDITOR_BM.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
