--- a/Desktop/Editar_General.desktop
+++ b/Desktop/Editar_General.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c "cd /home/pi/BOOKWORM/qt;./qt_editor_general"
-Icon=/home/pi/BOOKWORM/ICO_EDITOR_GENERAL.png
+Exec=sh -c "cd /home/pi/IMAGEN-A111/qt;./qt_editor_general"
+Icon=/home/pi/IMAGEN-A111/ICO_EDITOR_GENERAL.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
