--- a/Desktop/Editar_YSF2DMR.desktop
+++ b/Desktop/Editar_YSF2DMR.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c "cd /home/pi/BOOKWORM/qt; ./qt_editor_ysf2dmr"
-Icon=/home/pi/BOOKWORM/ICO_EDITOR_BM.png
+Exec=sh -c "cd /home/pi/IMAGEN-A111/qt; ./qt_editor_ysf2dmr"
+Icon=/home/pi/IMAGEN-A111/ICO_EDITOR_BM.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
