--- a/Desktop/Editar_ambe_3003.desktop
+++ b/Desktop/Editar_ambe_3003.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c "cd /home/pi/BOOKWORM/qt; ./qt_menu_ambe3003"
-Icon=/home/pi/BOOKWORM/ICO_EDITOR_DMR2NXDN.png
+Exec=sh -c "cd /home/pi/IMAGEN-A111/qt; ./qt_menu_ambe3003"
+Icon=/home/pi/IMAGEN-A111/ICO_EDITOR_DMR2NXDN.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
