--- a/Desktop/Editar_solofusion.desktop
+++ b/Desktop/Editar_solofusion.desktop
@@ -3,8 +3,8 @@ Version=1.0
 Type=Application
 Name=Editar solo FUSION
 Comment=
-Exec=sh -c "cd /home/pi/BOOKWORM/qt; ./qt_editor_solofusion"
-Icon=/home/pi/BOOKWORM/ICO_EDITOR_BM.png
+Exec=sh -c "cd /home/pi/IMAGEN-A111/qt; ./qt_editor_solofusion"
+Icon=/home/pi/IMAGEN-A111/ICO_EDITOR_BM.png
 Path=/home/pi/MMDVMHost
 Terminal=false
 StartupNotify=false
