--- a/Desktop/Menu_extra.desktop
+++ b/Desktop/Menu_extra.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 Terminal=true
-Exec=sh -c "cd /home/pi/BOOKWORM/qt; ./qt_menu_extra"
-Icon=/home/pi/BOOKWORM/ICO_MENU_EXTRA.png
+Exec=sh -c "cd /home/pi/IMAGEN-A111/qt; ./qt_menu_extra"
+Icon=/home/pi/IMAGEN-A111/ICO_MENU_EXTRA.png
 Type=Application
 Categories=GTK;Utility;TerminalEmulator;
 Name[en_US]=MMDVM Connect Screen
