--- a/Desktop/RXF_BM.desktop
+++ b/Desktop/RXF_BM.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-#Exec=sh -c "cd /home/pi/BOOKWORM;lxterminal --geometry=46x13 -e sudo sh info_bm.sh"
+#Exec=sh -c "cd /home/pi/IMAGEN-A111;lxterminal --geometry=46x13 -e sudo sh info_bm.sh"
 Exec=sh -c "cd /home/pi/qt;./qt_info_bm"
-Icon=/home/pi/BOOKWORM/ICO_INFO_BM.png
+Icon=/home/pi/IMAGEN-A111/ICO_INFO_BM.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
