--- a/Desktop/Reinciar_Imagen.desktop
+++ b/Desktop/Reinciar_Imagen.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/BOOKWORM/qt;./qt_reiniciar_imagen'
-Icon=/home/pi/BOOKWORM/ICO_REINICIAR_IMAGEN.png
+Exec=sh -c 'cd /home/pi/IMAGEN-A111/qt;./qt_reiniciar_imagen'
+Icon=/home/pi/IMAGEN-A111/ICO_REINICIAR_IMAGEN.png
 Type=Application
 StartupNotify=false
 Categories=GTK;Utility;TerminalEmulator;
