--- a/Desktop/Abrir_ambe_server.desktop
+++ b/Desktop/Abrir_ambe_server.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/IMAGEN-A111/; sudo sh ejecutar_ambe_server.sh'
+Exec=sh -c 'cd /home/pi/IMAGEN-A111/; sh ejecutar_ambe_server.sh'
 Icon=/home/pi/IMAGEN-A111/ICO_AMBE_OFF.png
 Type=Application
 StartupNotify=false
