--- a/Desktop/Abrir_solofusion.desktop
+++ b/Desktop/Abrir_solofusion.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=AbrirsoloYSF
 Comment=
-Exec=sh -c "cd /home/pi/IMAGEN-A111/; sudo sh ejecutar_solofusion.sh"
+Exec=sh -c "cd /home/pi/IMAGEN-A111/; sh ejecutar_solofusion.sh"
 Icon=/home/pi/IMAGEN-A111/ICO_SOLOFUSION_OFF.png
 Path=/home/pi/IMAGEN-A111
 Terminal=false
