--- a/Desktop/Abrir_DMR2NXDN.desktop
+++ b/Desktop/Abrir_DMR2NXDN.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/IMAGEN-A111;sudo sh ejecutar_DMR2NXDN.sh'
+Exec=sh -c 'cd /home/pi/IMAGEN-A111; sh ejecutar_DMR2NXDN.sh'
 Icon=/home/pi/IMAGEN-A111/ICO_DMR2NXDN_OFF.png
 Type=Application
 StartupNotify=false
