--- a/Desktop/Abrir_MMDVMPLUS.desktop
+++ b/Desktop/Abrir_MMDVMPLUS.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/IMAGEN-A111;sudo sh ejecutar_dmrplus.sh'
+Exec=sh -c 'cd /home/pi/IMAGEN-A111; sh ejecutar_dmrplus.sh'
 Icon=/home/pi/IMAGEN-A111/ICO_DMRPLUS_OFF.png
 Type=Application
 StartupNotify=false
