--- a/Desktop/Abrir_YSF2DMR.desktop
+++ b/Desktop/Abrir_YSF2DMR.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/IMAGEN-A111;sudo sh ejecutar_YSF2DMR.sh'
+Exec=sh -c 'cd /home/pi/IMAGEN-A111; sh ejecutar_YSF2DMR.sh'
 Icon=/home/pi/IMAGEN-A111/ICO_YSF2DMR_OFF.png
 Type=Application
 StartupNotify=false
