--- a/Desktop/Abrir_ircDDB.desktop
+++ b/Desktop/Abrir_ircDDB.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/IMAGEN-A111;sudo sh ejecutar_ircDDB.sh'
+Exec=sh -c 'cd /home/pi/IMAGEN-A111; sh ejecutar_ircDDB.sh'
 Icon=/home/pi/IMAGEN-A111/ICO_IRCDDB_OFF.png
 Type=Application
 StartupNotify=false
