--- a/Desktop/Abrir_solodstar.desktop
+++ b/Desktop/Abrir_solodstar.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=AbrirsoloDstar
 Comment=
-Exec=sh -c "cd /home/pi/IMAGEN-A111/; sudo sh ejecutar_solodstar.sh"
+Exec=sh -c "cd /home/pi/IMAGEN-A111/; sh ejecutar_solodstar.sh"
 Icon=/home/pi/IMAGEN-A111/ICO_SOLODSTAR_OFF.png
 Path=/home/pi/IMAGEN-A111
 Terminal=false
