--- a/Desktop/Actualizar_IDS.desktop
+++ b/Desktop/Actualizar_IDS.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-Exec=sh -c 'cd /home/pi/IMAGEN-A111/; sudo sh actualizar_IDS_MMDVMHost.sh'
+Exec=sh -c 'cd /home/pi/IMAGEN-A111/; sh actualizar_IDS_MMDVMHost.sh'
 Icon=/home/pi/IMAGEN-A111/ICO_ACTUALIZAR_IDS.png
 Type=Application
 StartupNotify=false
