--- a/Desktop/RXF_BM.desktop
+++ b/Desktop/RXF_BM.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 TryExec=lxterminal
-#Exec=sh -c "cd /home/pi/IMAGEN-A111;lxterminal --geometry=46x13 -e sudo sh info_bm.sh"
+#Exec=sh -c "cd /home/pi/IMAGEN-A111;lxterminal --geometry=46x13 -e sh info_bm.sh"
 Exec=sh -c "cd /home/pi/qt;./qt_info_bm"
 Icon=/home/pi/IMAGEN-A111/ICO_INFO_BM.png
 Type=Application
