--- a/Desktop/Colocar_iconos.desktop
+++ b/Desktop/Colocar_iconos.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Recolocar ICONOS
 Exec=sh -c 'cd /home/pi/IMAGEN-A111; sh colocar_iconos.sh'
-Comment=Rcolocar iconos
+Comment=Arregla iconos
 Icon=/home/pi/IMAGEN-A111/ICO_ORGANIZAR_ICONOS.png
 Path=/home/pi/IMAGEN-A111
 Terminal=false
