--- a/Desktop/Colocar_iconos.desktop
+++ b/Desktop/Colocar_iconos.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Recolocar ICONOS
+Name=Arregla ICONOS
 Exec=sh -c 'cd /home/pi/IMAGEN-A111; sh colocar_iconos.sh'
 Comment=Arregla iconos
 Icon=/home/pi/IMAGEN-A111/ICO_ORGANIZAR_ICONOS.png
